@@ -4674,7 +4674,6 @@
   <block id="f791bc685c526af8296381acff10f6a0" category="list-text">*Fermer le cas* : fournissez des détails sur la raison pour laquelle vous fermez le cas et cliquez sur *Fermer le cas*.</block>
   <block id="e93217b2f709a398ce3c0fb753beb05f" category="inline-image-macro">Capture d'écran qui montre les actions que vous pouvez effectuer après avoir sélectionné le menu dans la dernière colonne du tableau.</block>
   <block id="e9a5c374fb47ed2ae5cc6108fb36d829" category="paragraph"><block ref="e9a5c374fb47ed2ae5cc6108fb36d829" category="inline-image-macro-rx" type="image"></block></block>
-  <block id="3c6506a0407767fa4ee430c24f3b89e2" category="admonition">_Flash cache_, une vitesse d'écriture élevée et une unité de transmission maximale (MTU) supérieure de 8,896 sont disponibles via l'option de vitesse d'écriture *élevée* avec les types d'instances n2-standard-16, n2-standard-32, n2-standard-48 et n2-standard-64. En outre, pour atteindre un MTU plus élevé de 9 8,896, vous devez sélectionner VCP-1, VPC-2 ou VCP-3 pour le déploiement. _Flash cache_, une vitesse d'écriture élevée et un MTU de 9 8,896 dépendent des fonctionnalités et ne peuvent pas être désactivés individuellement dans une instance configurée.</block>
   <block id="c616f204302ed58d4618e3ded77f1858" category="paragraph">Si vous utilisez une paire haute disponibilité, Cloud Volumes ONTAP prend en charge la vitesse d'écriture élevée avec plusieurs types de machines virtuelles, à commencer par la version 9.13.0. Accédez au<block ref="44033d1307c0997839bd6a3cb420c3fd" category="inline-link-rx"></block> Pour afficher les types de VM qui prennent en charge une vitesse d'écriture élevée.</block>
   <block id="436ea77bab9d72d8fe71dbccf1dd6613" category="list-text">Licence MTEKM (Encryption Key Management) mutualisée installée, à partir de Cloud Volumes ONTAP 9.12.1 GA.</block>
   <block id="51f24173f2f6195b17c8e22458037f6c" category="summary">Vérifiez la signature d'un fichier image Google Cloud exporté à l'aide de l'outil fichier de résumé d'images Cloud Volumes ONTAP.</block>
@@ -4760,4 +4759,12 @@
   <block id="5b420079bca1c870914caa221b31442e" category="section-title">Cloud Volumes ONTAP 9.13.0</block>
   <block id="ad598f033e541927e862b0c5e17319ec" category="paragraph">BlueXP peut désormais déployer et gérer Cloud Volumes ONTAP 9.13.0 dans AWS, Azure et Google Cloud.</block>
   <block id="066405d152aeaf5c017e93048679ce43" category="paragraph"><block ref="0d69949c9de36f8752d49be7f0ec9aed" category="inline-link-rx"></block>.</block>
+  <block id="12169a51b108f73888655f2a089d493a" category="list-text">Seuls les systèmes à un seul nœud avec BYOL sont pris en charge dans les régions chinoises.</block>
+  <block id="80dcfd22a2b6d14e887c1030b67098dd" category="admonition">_Flash cache_, une vitesse d'écriture élevée et une unité de transmission maximale (MTU) supérieure de 8,896 octets sont disponibles via l'option de vitesse d'écriture *élevée* avec les types d'instance n2-standard-16, n2-standard-32, n2-standard-48 et n2-standard-64. En outre, pour augmenter la MTU de 9 8,896, les VPC-1, VPC-2 et VPC-3 doivent être sélectionnés pour le déploiement. _Flash cache_, une vitesse d'écriture élevée et un MTU de 9 8,896 dépendent des fonctionnalités et ne peuvent pas être désactivés individuellement dans une instance configurée. Pour plus d'informations sur les modèles VPC-1, VPC-2 et VPC-3, reportez-vous à la section<block ref="4cee9c1f75c8867521472d51adc68a19" category="inline-link-rx"></block>.</block>
+  <block id="ac1c722990c18687e956d9488b59bd3d" category="admonition">Pour permettre une vitesse d'écriture élevée dans les nouveaux déploiements de paires haute disponibilité Google Cloud, une unité de transmission (MTU) maximale est requise d'au moins 8,896 octets pour les VPC-1, VPC-2 et VPC-3. Si vous choisissez de mettre à niveau les VPC-1, VPC-2 et VPC-3 existants vers un MTU de 1 8,896 octets, vous devez arrêter tous les systèmes haute disponibilité existants en utilisant ces VPC lors du processus de configuration.</block>
+  <block id="8ffbbcac612c8285be31d80ec1c1454d" category="admonition">L'option de vitesse d'écriture *élevée* est prise en charge avec les paires haute disponibilité Cloud Volumes ONTAP dans Google Cloud à partir de la version 9.13.0.</block>
+  <block id="98f6dc87e7c206ec16da559a2af45beb" category="section-title">Flash cache et vitesse d'écriture élevée dans Google Cloud</block>
+  <block id="77e5d57bae938bc31208cded57756dc8" category="paragraph">La prise en charge de Flash cache, de la vitesse d'écriture élevée et d'une unité de transmission maximale (MTU) élevée de 8,896 octets est désormais disponible pour certaines instances de la version Cloud Volumes ONTAP 9.13.0.</block>
+  <block id="80d41628bf38145af2326ce3d52d8e91" category="inline-link-macro">Configurations prises en charge par licence pour Google Cloud</block>
+  <block id="0a623de488b37ca75333d521fccaa559" category="paragraph">En savoir plus sur <block ref="cdeafd55498169f22d9d7a55ffee4ff4" category="inline-link-macro-rx"></block>.</block>
 </blocks>
