@@ -63,6 +63,14 @@ Cloud Volumes ONTAP est désormais pris en charge dans tous les environnements c
 
 
 
+=== Flash cache et vitesse d'écriture élevée dans Google Cloud
+
+La prise en charge de Flash cache, de la vitesse d'écriture élevée et d'une unité de transmission maximale (MTU) élevée de 8,896 octets est désormais disponible pour certaines instances de la version Cloud Volumes ONTAP 9.13.0.
+
+En savoir plus sur link:https://docs.netapp.com/us-en/cloud-volumes-ontap-relnotes/reference-configs-gcp.html["Configurations prises en charge par licence pour Google Cloud"^].
+
+
+
 == 5 février 2023
 
 Les modifications suivantes ont été introduites avec la version 3.9.26 du connecteur.
